<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/list"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list"
        app:layout_constraintBottom_toTopOf="@id/name"/>

    <EditText
        android:id="@+id/col_edit"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:background="@drawable/edittext_layout"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/row_edit"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:background="@drawable/edittext_layout"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/col_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/height_edit"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:background="@drawable/edittext_layout"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/col_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:background="@drawable/edittext_layout"
        android:inputType="text"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="@id/row_edit"
        app:layout_constraintBottom_toTopOf="@id/row"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/name_edit"
        app:layout_constraintBottom_toTopOf="@id/name_edit"/>

    <TextView
        android:id="@+id/col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/col"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/col_edit"
        app:layout_constraintBottom_toTopOf="@id/col_edit"/>

    <TextView
        android:id="@+id/row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/row_edit"
        app:layout_constraintBottom_toTopOf="@id/row_edit"/>

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/height_edit"
        app:layout_constraintBottom_toTopOf="@id/height_edit"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sharp_close_24"
        app:layout_constraintStart_toEndOf="@id/row_edit"
        app:layout_constraintEnd_toStartOf="@id/col_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sharp_close_24"
        app:layout_constraintStart_toEndOf="@id/col_edit"
        app:layout_constraintEnd_toStartOf="@id/height_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/nextbutton_layout"
        android:minWidth="50dp"
        android:minHeight="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/col_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_layout"
        android:backgroundTint="@color/black"
        android:text="@string/set"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>